--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,8 @@ body {
   left: 10%;
   height: 90%;
   top: 5%;
+  display: flex;
+  flex-direction: column;
 }
 
 #app-root {
@@ -55,18 +57,17 @@ body {
 }
 #splash-screen {
   background-image: linear-gradient(to bottom, #b8b808, #636723);
+  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
   color: white;
   font-size: 5vw;
   border-color: black;
   border-width: 2px;
   border-style: solid;
-  border-radius: 10px;
-  padding-left: 10%;
-  padding-top: 5%;
-  padding-bottom: 5%;
-  height:70%;
+  height:100%;
   text-align: center;
-  vertical-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #edit-toolbar {
@@ -126,9 +127,7 @@ body {
 }
 
 #list-selector-heading {
-  position: absolute;
-  left: 0%;
-  top: 0%;
+  padding: 1vh, 0;
   width: 100%;
   height: 10%;
   text-align: center;
@@ -144,14 +143,31 @@ body {
 }
 
 #list-selector-list {
-  position: absolute;
+  /* position: absolute;
   left: 0%;
-  top: 10%;
+  top: 10%; */
   width: 100%;
   height: 90%;
   display: flex;
   flex-direction: column;
   overflow: scroll;
+}
+
+#playlister-statusbar{
+  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
+  width: 100%;
+  height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 36pt;
+  background-color: #1976d2;
+  color: white;
+  flex-shrink: 0;
+}
+
+#playlist-selector{
+  height: 100%;
 }
 
 .list-card,
