--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,7 +150,7 @@ body {
   height: 90%;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 #playlister-statusbar{
